corrected alignment for price

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -121,6 +121,7 @@ input::placeholder {
     font-weight: bolder;
     font-size: 30px;
     font-family: sans-serif;
+    width: 50%;
 }
 .card > h3{
     margin-top: 30px;
